# BulenCoin

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  bulencoin_spec.txt  community_logic.js  docker-compose.yml  index.html  script.js  styles.css
ads/: 10s_spots.md
brand/: README.md  colors.md  messaging.md  press_note.md  typography.md  usage_do_dont.md
bulennode/: .env.gateway.example  Dockerfile  docker-compose.local.yml  docker-compose.tls.yml  package-lock.json  package.json
bulennode-rs/: Cargo.toml
bulennode-rs/src/: main.rs
docs/: README.md  bulencoin_spec_pl.md  deployment_guide.md  deployment_guide_en.md  dev_cookbook.md  downloads.md  feasibility_min_hardware.md  genesis_and_release_signing.md  grafana-dashboard.json  legal_compliance_pl.md  metrics.md  multi_host_deployment_runbook.md  onboarding_quickstart.md  ongoing.md  operator_runbook.md  overview_en.md  payment_integration.md  press_kits.md  prod_manifests.md  prometheus_alerts.yml  provisioning_ubuntu.md  rewards_policy.md  runbook_operations.md  sbom_bulennode.json  sbom_explorer.json  sbom_status.json  security_hardening_pl.md  security_supply_chain_status.md  testing_strategy.md  tokenomics_and_roadmap.md  upgrade_runbook.md  whitesheet_investor_pl.md
explorer/: .eslintrc.json  Dockerfile  package-lock.json  package.json
rewards-hub/: README.md  package-lock.json  package.json  server.js
scripts/: android_one_shot.sh  build_android_app.sh  ci.sh  (+10 more)
sdk-rs/: Cargo.toml  README.md
sdk-rs/src/: lib.rs
sdk-rs/tests/: integration.rs
(+112 files in other folders)
