[package]
name = "bulennode-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
base64 = "0.22"
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
